--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/rough.svg" /> -->
     <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
-    <link rel="icon" type="image/jpeg" href="/jpglogo.jpg" />
+    <link rel="icon" type="image/jpeg" href="/gclogoorange.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
