--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/rough.svg" /> -->
-    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
-    <link rel="icon" type="image/jpeg" href="/bblogogc.jpg" />
+    <link rel="icon" type="image/png" href="/final_gc_logo_removebg.png" />
+    <!-- <link rel="icon" type="image/jpeg" href="/bblogogc.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
