--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/rough.svg" /> -->
-    <link rel="icon" type="image/png" href="/final_gc_logo_removebg.png" />
+    <link rel="icon" type="image/png" href="/bw_logo_ph.png" />
     <!-- <link rel="icon" type="image/jpeg" href="/bblogogc.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
